--- a/discografia.htm
+++ b/discografia.htm
@@ -40,10 +40,9 @@
           Juan Morcillo, mezclado y masterizado por Juanki.<br>
           <br>
           El dibujo de la carátula y la galleta del cd, son de Carlos Azagra,
-          dibujante de El Jueves.<br>
+          dibujante de "El Jueves".<br>
           <br>
-          El Cd-Extra, está editado por Lemon songs, siendo la referencia
-          Ref.11CD2110 y el depósito Legal D.L.CS-361-2011<br>
+          El Cd-Extra, está editado por Lemon songs (Ref.11CD2110 y Depósito&nbsp;Legal&nbsp;D.L.CS-361-2011<br>
           <br>
           Los temas incluídos son:</p>
         <ul>
@@ -96,13 +95,9 @@
         <p>Dvd grabado el día 30 de Agosto de 2008, durante el XIII Bestialc en
           L'Alcora.<br>
           <br>
-          Tras 16 años sin tocar, y como motivo del 20º aniversario de la
-          formación del grupo, decidimos ensayar y participar en el festival.<br>
-          <br>
           Contando con la colaboración de Gonzalo Cotanda en la realización del
           vídeo, y Juanki en la grabación y producción del audio, pudimos
-          sacar&nbsp; finalmente este vídeo, editado por Lemonsongs (09DVD2081
-          Dep. legal: CS-233-2009)<br>
+          sacar&nbsp; finalmente este vídeo, editado por Lemonsongs (09DVD2081&nbsp;Dep.&nbsp;legal:&nbsp;CS-233-2009)<br>
           <br>
           23 temas, entrevistas, fotos.... Casi hora y media.<br>
           <br>
@@ -178,13 +173,13 @@
         <a target="_blank" href="imagenes/1komunion1.jpg"> <img src="imagenes/_1_komunion1.jpg"
             alt="Portada LP"> </a> <a target="_blank" href="imagenes/1komunion2.jpg">
           <img src="imagenes/_1_komunion2.jpg" alt="Contraportada LP"> </a>
-        <p>El LP, editado en vinilo, claro... lo de los cd's era muy marciano
-          por aquella época, se grabó en marzo del 91, en "Polka", un pequeño
+        <p>El LP (editado en vinilo, claro... lo de los cd's era muy marciano
+          por aquella época), se grabó en marzo del 91, en "Polka", un pequeño
           estudio que se había montado Alejandro Cardá en su chalet, en
           Vila-Real, con una Tascam de 4 pistas.<br>
           <br>
           Nuestra intención era hacer una maqueta en mejores condiciones que la
-          anterior, pero al final, nos convenció Julio Matraka que lo editásemos
+          anterior ("Tour'89"), aunque finalmente, nos convenció Julio Matraka que lo editásemos
           en vinilo. Una canción que no entró en el vinilo por falta de espacio,
           fué "Nada sabrás", que nos la pidió Miguel Angel Villanueva para
           incluirla en el Ep "El gallinero eléctrico".<br>
@@ -195,7 +190,7 @@
           artesanalmente<br>
           <br>
           El Lp, estuvo distribuído por Matraka Diskak, y editado por Munster
-          Records (EUKZ 002, Dep. legal: M-22217-91)<br>
+          Records (EUKZ&nbsp;002, Dep.legal: M-22217-91)<br>
           <br>
           Temas incluídos:</p>
         <ul>
@@ -256,8 +251,7 @@
         <br>
         Temas incluidos:<br>
         <br>
-        &nbsp;&nbsp;<span style="color: yellow;">&nbsp; <a href="%20%20%20%20%20%20%3Cdiv%20class=%22indice-letras%22%3E%20%3Ca%20href=%22#Primera_Komunion%22%3EPrimera">Primera
-            Komunión</a><br>
+          &nbsp;&nbsp;<span style="color: yellow;">&nbsp; Primera&nbsp;Komunión<br>
           &nbsp;&nbsp;&nbsp; Irán - Irak<br>
           &nbsp;&nbsp;&nbsp; Soldadito español<br>
           &nbsp;&nbsp;&nbsp; Si fuera Dios<br>
