--- a/biografia.htm
+++ b/biografia.htm
@@ -25,16 +25,16 @@
       <br>
       Corría el año 1988 e internet era prácticamente un pensamiento futurista.
       Me refiero exactamente a que, menos el fútbol de 2ª regional y las veladas
-      pugilísticas de Estudio 17 (no te digo na´) todo lo demás en esa época era
+      pugilísticas de Estudio 17 (no te digo na´), todo lo demás en esa época era
       bastante aburrido en domingo.<br>
       <br>
-      &nbsp;&nbsp;&nbsp; Menos mal que por encima de todo se encontraba lo que
-      realmente había importado hasta la fecha y que fuese la hora que fuese, te
+      Menos mal que por encima de todo se encontraba lo que
+      realmente había importado hasta la fecha, y que fuese la hora que fuese te
       esperaba sin malos rollos y en el mismo estado de siempre. Estoy por
       supuesto hablando de la MÚSICA.<br>
       <br>
       <br>
-      &nbsp;&nbsp;&nbsp; Por entonces lo más difícil siempre era encontrar a
+      Por entonces lo más difícil siempre era encontrar a
       alguien, que al igual que tú, estuviera dispuesto a descargar toda la
       energía del Universo intentando emular a sus héroes musicales. Sólamente
       había dos posibilidades: <br>
@@ -42,7 +42,7 @@
       2ª - Aquellos que les hervía la sangre por hacer algo que les sacara de la
       rutina.<br>
       <br>
-      &nbsp;Y una de las casualidades de la vida: delante de ti, sin saberlo,
+      Y una de las casualidades de la vida: delante de ti, sin saberlo,
       tienes los ingredientes necesarios para cocinar el plato del que hace
       tiempo que te sabes la receta de memoria.<br>
       <br>
@@ -72,11 +72,11 @@
             <p><span style="color: #cc33cc;">Aburrido compulsivo baterista</span></p>
           </article>
         </section>
-        &nbsp;Y como todo el mundo sabe, este maravilloso y jugoso manjar, duró
+        Y como todo el mundo sabe, este maravilloso y jugoso manjar, duró
         lo que los comensales tardaron en rebañar el plato. Nada más y nada
         menos que 4 magníficos años.<br>
         <br>
-        &nbsp;&nbsp;&nbsp; Por cierto, prolíficos y fructuosos años que “dieron
+        Por cierto, prolíficos y fructuosos años que “dieron
         a luz” todos aquellos conciertos (unos 84 más o menos), grabaciones y
         sesiones de guasa inolvidables, tanto para sus miembros como para sus
         seguidores.<a href="imagenes/foto%20oficial%20[1024x768].jpg" target="_blank"><img
@@ -93,8 +93,8 @@
         &nbsp;&nbsp;&nbsp; Había llovido mucho desde la última vez que habíamos
         tocado, así que, con unos pocos ensayos y en plan kamikaze, nos echamos p'alante, y pensamos que
         para la ocasión debíamos hacer algo que quedase ya plasmado para la
-        posteridad. "Resurrekción" fue el título de esa grabación en directo, en formato DVD por si alguien todavía tiene reproductor.<br>
-        &nbsp;&nbsp;&nbsp; Gracias a la colaboración de Lalo Cotanda (grabación
+        posteridad: "Resurrekción" fue el título de esa grabación en directo, en formato DVD por si alguien todavía tiene reproductor.<br>
+        Gracias a la colaboración de Lalo Cotanda (grabación
         de Video y Montaje) y Juan Carlos Tomás Castillo "Juanki" (Grabación de
         audio)... Y sobre todo al público, que una vez más vino a vernos,
         brindándonos la ocasión de vivir una noche inolvidable con su presencia.<br>
@@ -103,34 +103,33 @@
         canciones que perpetramos en ese concierto, entrevistas y algunas
         fotos... <br>
         ...esperemos que nuestros nietos -si los hubiere-, puedan hacer puntería
-        con las copias en uno de los cuatro&nbsp; contenedores ...&nbsp;<span id="line10"><span>
-            😁 </span></span><span id="line11"><span> </span></span><span id="line12"><span></span></span>
-        <p>&nbsp; </p>
+        con las copias en uno de los cuatro&nbsp; contenedores ...
+            😁 <br><br>
         <p>Ya puestos en harina, en 2011, sacamos un CD con los temas que habían
           quedado en el tintero por grabar, y también hicimos algunas
-          colaboraciones en recopilatorios y tributos, como por ejemplo, el tema
-          de J. Morcillo "Quería el Mundo Cambiar"</p>
+          colaboraciones en recopilatorios y tributos, como el tema
+          de J. Morcillo "Quería el Mundo Cambiar".</p>
         <br>
-        &nbsp;&nbsp;&nbsp; Hicimos unos cuantos bolos por diferentes locales y
+        Hicimos unos cuantos bolos por diferentes locales y
         participamos en varios festivales, hasta que en 2020, por motivos de
         salud, nuestro compañero Antonio Díaz "Bici" ya no pudo acompañarnos con
         su voz.<br>
-        Teniendo un último concierto pendiente, se puso a la voz Jesús&nbsp; "El
+        Teniendo un último concierto pendiente, se puso a la voz Jesús "El
         Madri" Gallardo, y a la batería su hijo Ferrán Gallardo.<br>
         <br>
-        &nbsp;&nbsp;&nbsp; Poco después, en 2022, la voz y el alma de nuestro
+        Poco después, en 2022, la voz y el alma de nuestro
         sonido, Antonio "Bici", nos dejó prematuramente. Todavía hoy en día, nos es
         difícil de imaginar que no está entre nosotros. <br>
         <br>
-        &nbsp;&nbsp;&nbsp; Ese mismo año, en el 13º Festival Ultrasons,
+        Ese mismo año, en el 13º Festival Ultrasons,
         decidimos hacer un último concierto como homenaje a nuestro compañero y
         amigo "Bici", teniendo nuevamente a Jesús a la voz y a Ferrán a la
-        batería,&nbsp; con Carlos Medina a la guitarra y los cameos de Toni
-        "X-Fanekaes" y J.L. Lorente "El Xino", cantando un par de temas.<br>
+        batería, con la colaboración de Carlos Medina a la guitarra, y los cameos de Toni
+        "X-Fanekaes" y J.L. Lorente "El Xino" cantando un par de temas.<br>
         <br>
-        &nbsp;&nbsp;&nbsp; Y... a día de hoy cada uno sigue con la vida que
+        Y... a día de hoy cada uno sigue con la vida que
         tiene. Sin más. <br>
-        &nbsp;&nbsp;&nbsp; Queremos dar las gracias a todos aquellos que han
+        Queremos dar las gracias a todos aquellos que han
         querido siempre que volvamos desde Alcora hasta Méjico. Las
         circunstancias son las que son. Y tan felices.<br>
         <br>
