--- a/biografia.htm
+++ b/biografia.htm
@@ -42,7 +42,7 @@
       2ª - Aquellos que les hervía la sangre por hacer algo que les sacara de la
       rutina.<br>
       <br>
-      Y una de las casualidades de la vida: delante de ti, sin saberlo,
+      Y una de las casualidades de la vida: Delante de ti, sin saberlo,
       tienes los ingredientes necesarios para cocinar el plato del que hace
       tiempo que te sabes la receta de memoria.<br>
       <br>
