--- a/discografia.htm
+++ b/discografia.htm
@@ -339,7 +339,7 @@
         "Quería el mundo cambiar", versión que aparece en nuestro Cd
         "Konfirmación", y que hemos aportado al tributo.<br>
         <br>
-        Este Cd ha salido en Octubre de 2015, editado por Lemon Songs.<br>
+        Este Cd ha salido en Octubre de 2015, editado por Lemon Songs. (Ref.&nbsp;12CD2152 D.&nbsp;L.&nbsp;CS&nbsp;423-2015)<br>
         <br>
         Tema incluido:<br>
         <br>
