--- a/discografia.htm
+++ b/discografia.htm
@@ -352,7 +352,7 @@
             alt=""></a><a href="imagenes/babia1.jpg" target="_blank"><img src="imagenes/_babia1.jpg"
             alt=""></a><br>
         Lp recopilatorio de actuaciones en directo en Babia Rock-Bar, de
-        Valencia. En un principio, se iba a editar un vídeo, ya que se gravaban
+        Valencia. En un principio se iba a editar un vídeo, ya que se gravaban
         todas las actuaciones en éste formato, pero al final, se editó sólamente
         el audio en formato disco.<br>
         <br>
@@ -374,17 +374,16 @@
         <a href="imagenes/pop%20castellon%20800%20[800x600].jpg" target="_blank"><img
             src="imagenes/pop%20castellon%20800%20[800x600]%20[200].jpg" alt=""></a><br>
         Este es un curioso Disco-Libro, en el cual se recoge la historia del pop
-        (y rock) en Castellón en las décadas de los 60's, 70's, 80's, 90'ss y
+        (y rock) en Castellón en las décadas de los 60's, 70's, 80's, 90's y
         00's.<br>
         <br>
-        Junto con el libro, van incluidos 4cd's con 91 temas de los más diversos
+        Junto con el libro van incluidos 4cd's, con 91 temas de los más diversos
         y variopintos grupos que han configurado el panorama musical dentro del
         pop-rock en nuestra provincia, y en el cual, tenemos la satisfacción de
         formar parte, tanto en la reseña del libro, como en el recopilatorio de
         cd's, de los que se ha incluido el tema "Barrios bajos".<br>
         <br>
-        Este Disco-Libro, ha sido editado por Lemonsongs en 2011 (11CD2101, dep.
-        legal: CS-65-2011).<br>
+        Este Disco-Libro, ha sido editado por Lemonsongs en 2011 (11CD2101,&nbsp;Dep.&nbsp;legal:&nbsp;CS-65-2011).<br>
         <br>
         &nbsp;<br>
         <br>
@@ -420,13 +419,13 @@
         <a href="imagenes/antiheroina.jpg" target="_blank"><img src="imagenes/_antiheroina.jpg"
             alt=""></a><br>
         Esta cinta fué el resultado de un concierto que fué organizado en
-        Valencia, el 30 de Junio de 1990, a cargo de distintos colectivos
+        Valencia el 30 de Junio de 1990, a cargo de distintos colectivos
         libertarios.<br>
         <br>
         Participaron en la grabación: Nocivo, Os verjalhudos, La chusma,
         Parabellum y 1ª&nbsp;Komunión.<br>
         <br>
-        La cinta fué editada por Fobia (f001 - Dep. legal: M-8524-1991)<br>
+        La cinta fué editada por Fobia (f001&nbsp;- Dep.&nbsp;legal:&nbsp;M-8524-1991)<br>
         <br>
         Temas de 1ª&nbsp;Komunión incluídos:<br>
         <br>
