--- a/discografia.htm
+++ b/discografia.htm
@@ -294,7 +294,7 @@
         Recopilatorio en formato single, en el cual grabaron aparte de nosotros:
         Dorados Graueros, The Joke y Tom Bombadil.<br>
         <br>
-        Fué editado por Discos Medicinales (Dep. legal: CS 371 91) en 1991,.<br>
+        Fué editado por Discos Medicinales (Dep.&nbsp;legal:&nbsp;CS&nbsp;371&nbsp;91) en 1991,.<br>
         <br>
         Nos pidió M. A. Villanueva un tema para dicho recopilatorio, y
         disponíamos del tema "Nada sabrás", que había quedado fuera del LP por
@@ -422,7 +422,7 @@
         Valencia el 30 de Junio de 1990, a cargo de distintos colectivos
         libertarios.<br>
         <br>
-        Participaron en la grabación: Nocivo, Os verjalhudos, La chusma,
+        Participaron en la grabación: Nocivo, Os Verjalhudos, La Chusma,
         Parabellum y 1ª&nbsp;Komunión.<br>
         <br>
         La cinta fué editada por Fobia (f001&nbsp;- Dep.&nbsp;legal:&nbsp;M-8524-1991)<br>
