--- a/imagenes magdalena fest.html
+++ b/imagenes magdalena fest.html
@@ -28,13 +28,12 @@
   </head>
   <body>
     <!-- Logo que SIEMPRE vuelve a index.htm -->
-    <header class="cabecera"> <a href="index.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
-
+    <header class="cabecera"> <a href="index.htm" class="logo"> <img src="imagenes/texto%20logo1.gif"
           alt="1ª KOMUNION"> </a> </header>
     <!-- Menú horizontal entre líneas moradas -->
     <nav class="nav-principal">
       <ul>
- <li><a href="index.htm">Inicio</a></li>
+        <li><a href="index.htm">Inicio</a></li>
         <li><a href="biografia.htm">Biografía</a></li>
         <li><a href="discografia.htm">Discografía</a></li>
         <li><a href="imagenes.htm" class="active">Imágenes</a></li>
@@ -49,13 +48,12 @@
       <p><a href="imagenes.htm" class="volver">← Volver atrás</a></p>
       <section class="galeria-grupo">
         <h2>Magdalena Fest (2014)</h2>
-        <a href="imagenes/magdalena%20fest%202014/00.jpg" target="_blank"> <img
-
-            src="imagenes/magdalena%20fest%202014/00.jpg" alt="foto1"> </a> <a
-
-          href="imagenes/magdalena%20fest%202014/01.png" target="_blank"> <img
-
-            src="imagenes/magdalena%20fest%202014/01.png" alt="foto2"> </a> </section>
+        <a href="imagenes/magdalena%20fest%202014/00.jpg" target="_blank"> <img
+            src="imagenes/magdalena%20fest%202014/00.jpg" alt="foto1"> </a> <a
+          href="imagenes/magdalena%20fest%202014/01.png" target="_blank"> <img
+            src="imagenes/magdalena%20fest%202014/01.png" alt="foto2"> </a> <a
+          href="imagenes/magdalena%20fest%202014/02.JPG" target="_blank"> <img
+            src="imagenes/magdalena%20fest%202014/02.JPG" alt="foto1"> </a> </section>
       <!-- Volver abajo -->
       <p><a href="imagenes.htm" class="volver">← Volver atrás</a></p>
     </main>
