--- a/imagenes opal.html
+++ b/imagenes opal.html
@@ -89,12 +89,12 @@
           target="_blank"> <img src="imagenes/opal%202012/28.JPG" alt="foto1">
         </a> <a href="imagenes/opal%202012/29.JPG" target="_blank"> <img src="imagenes/opal%202012/29.JPG"
             alt="foto2"> </a> <a href="imagenes/opal%202012/30.JPG" target="_blank">
-          <img src="imagenes/opal%202012/30.JPG" alt="foto1"> </a> <a href="imagenes/opal%202012/31.jpg"
-          target="_blank"> <img src="imagenes/opal%202012/31.jpg" alt="foto2">
-        </a> <a href="imagenes/opal%202012/32.JPG" target="_blank"> <img src="imagenes/opal%202012/32.JPG"
-            alt="foto1"> </a> <a href="imagenes/opal%202012/33.JPG" target="_blank">
-          <img src="imagenes/opal%202012/33.JPG" alt="foto2"> </a> <a href="imagenes/opal%202012/35.JPG"
-          target="_blank"> <img src="imagenes/opal%202012/35.JPG"></a> </section>
+          <img src="imagenes/opal%202012/30.JPG" alt="foto1">&nbsp;</a><a href="imagenes/opal%202012/31.jpg"
+          target="_blank">&nbsp;</a><a href="imagenes/opal%202012/32.JPG" target="_blank">&nbsp;</a><a
+          href="imagenes/opal%202012/33.JPG" target="_blank"> </a> <a href="imagenes/opal%202012/35.JPG"
+          target="_blank"> <img src="imagenes/opal%202012/35.JPG"></a><a href="imagenes/opal%202012/32.JPG"
+          target="_blank"><img src="imagenes/opal%202012/32.JPG" alt="foto1"></a>
+      </section>
       <!-- Volver abajo -->
       <p><a href="imagenes.htm" class="volver">← Volver atrás</a></p>
     </main>
