--- a/imagenes opal.html
+++ b/imagenes opal.html
@@ -40,7 +40,7 @@
         <li><a href="imagenes.htm" class="active">Imágenes</a></li>
         <li><a href="letras.htm">Audios</a></li>
         <li><a href="videos.htm">Vídeos</a></li>
-        <li><a target="_blank" href="https://facebook.com/1aKomunion">Facebook</a></li>
+        <li><a href="https://facebook.com/1aKomunion">Facebook</a></li>
       </ul>
     </nav>
     <!-- Galería de imágenes -->
@@ -49,54 +49,54 @@
       <p><a href="imagenes.htm" class="volver">← Volver atrás</a></p>
       <section class="galeria-grupo">
         <h2>Sala Opal (2012)</h2>
-        <a href="imagenes/opal%202012/00.jpg" target="_blank"> <img src="imagenes/opal%202012/00.jpg"
-            alt="foto1"> </a> <a href="imagenes/opal%202012/01.jpg" target="_blank">
+        <a href="imagenes/opal%202012/00.jpg"> <img src="imagenes/opal%202012/00.jpg"
+            alt="foto1"> </a> <a href="imagenes/opal%202012/01.jpg">
           <img src="imagenes/opal%202012/01.jpg" alt="foto2"> </a> <a href="imagenes/opal%202012/02.JPG"
-          target="_blank"> <img src="imagenes/opal%202012/02.JPG" alt="foto1">
-        </a> <a href="imagenes/opal%202012/03.jpg" target="_blank"> <img src="imagenes/opal%202012/03.jpg"
-            target="_blank">&nbsp; </a> <a href="imagenes/opal%202012/04.jpg"
-          target="_blank"> <img src="imagenes/opal%202012/04.jpg" alt="foto2">
-        </a> <a href="imagenes/opal%202012/06.jpg" target="_blank"> <img src="imagenes/opal%202012/06.jpg"
-            alt="foto1"> </a> <a href="imagenes/opal%202012/07.JPG" target="_blank">
+         > <img src="imagenes/opal%202012/02.JPG" alt="foto1">
+        </a> <a href="imagenes/opal%202012/03.jpg"> <img src="imagenes/opal%202012/03.jpg"
+           >&nbsp; </a> <a href="imagenes/opal%202012/04.jpg"
+         > <img src="imagenes/opal%202012/04.jpg" alt="foto2">
+        </a> <a href="imagenes/opal%202012/06.jpg"> <img src="imagenes/opal%202012/06.jpg"
+            alt="foto1"> </a> <a href="imagenes/opal%202012/07.JPG">
           <img src="imagenes/opal%202012/07.JPG" alt="foto2"> </a> <a href="imagenes/opal%202012/08.JPG"
-          target="_blank"> <img src="imagenes/opal%202012/08.JPG" alt="foto1">
-        </a> <a href="imagenes/opal%202012/09.JPG" target="_blank"> <img src="imagenes/opal%202012/09.JPG"
-            alt="foto2"> </a> <a href="imagenes/opal%202012/10.JPG" target="_blank">
+         > <img src="imagenes/opal%202012/08.JPG" alt="foto1">
+        </a> <a href="imagenes/opal%202012/09.JPG"> <img src="imagenes/opal%202012/09.JPG"
+            alt="foto2"> </a> <a href="imagenes/opal%202012/10.JPG">
           <img src="imagenes/opal%202012/10.JPG" alt="foto1"> </a> <a href="imagenes/opal%202012/11.jpg"
-          target="_blank"> <img src="imagenes/opal%202012/11.jpg" alt="foto2">
-        </a> <a href="imagenes/opal%202012/12.jpg" target="_blank"> <img src="imagenes/opal%202012/12.jpg"
-            alt="foto1"> </a> <a href="imagenes/opal%202012/13.jpg" target="_blank">
+         > <img src="imagenes/opal%202012/11.jpg" alt="foto2">
+        </a> <a href="imagenes/opal%202012/12.jpg"> <img src="imagenes/opal%202012/12.jpg"
+            alt="foto1"> </a> <a href="imagenes/opal%202012/13.jpg">
           <img src="imagenes/opal%202012/13.jpg" alt="foto2"> </a> <a href="imagenes/opal%202012/14.JPG"
-          target="_blank"> <img src="imagenes/opal%202012/14.JPG" alt="foto1">
-        </a> <a href="imagenes/opal%202012/15.jpg" target="_blank"> <img src="imagenes/opal%202012/15.jpg"
-            alt="foto2"> </a> <a href="imagenes/opal%202012/16.jpg" target="_blank">
+         > <img src="imagenes/opal%202012/14.JPG" alt="foto1">
+        </a> <a href="imagenes/opal%202012/15.jpg"> <img src="imagenes/opal%202012/15.jpg"
+            alt="foto2"> </a> <a href="imagenes/opal%202012/16.jpg">
           <img src="imagenes/opal%202012/16.jpg" alt="foto1"> </a> <a href="imagenes/opal%202012/17.jpg"
-          target="_blank"> <img src="imagenes/opal%202012/17.jpg" alt="foto2">
-        </a> <a href="imagenes/opal%202012/18.jpg" target="_blank"> <img src="imagenes/opal%202012/18.jpg"
+         > <img src="imagenes/opal%202012/17.jpg" alt="foto2">
+        </a> <a href="imagenes/opal%202012/18.jpg"> <img src="imagenes/opal%202012/18.jpg"
             alt="foto1"> </a> <a href="file:///C:/Users/1akom/Desktop/web%20kom%20-%20copia/imagenes/opal%202012/19.JPG"
-          target="_blank"> <img src="imagenes/opal%202012/19.JPG" alt="foto2">
-        </a> <a href="imagenes/opal%202012/20.jpg" target="_blank"> <img src="imagenes/opal%202012/20.jpg"
-            alt="foto1"> </a> <a href="imagenes/opal%202012/21.jpg" target="_blank">
+         > <img src="imagenes/opal%202012/19.JPG" alt="foto2">
+        </a> <a href="imagenes/opal%202012/20.jpg"> <img src="imagenes/opal%202012/20.jpg"
+            alt="foto1"> </a> <a href="imagenes/opal%202012/21.jpg">
           <img src="imagenes/opal%202012/21.jpg" alt="foto2"> </a> <a href="imagenes/opal%202012/22.jpg"
-          target="_blank"> <img src="imagenes/opal%202012/22.jpg" alt="foto1">
-        </a> <a href="imagenes/opal%202012/23.jpg" target="_blank"> <img src="imagenes/opal%202012/23.jpg"
-            alt="foto2"> </a> <a href="imagenes/opal%202012/24.jpg" target="_blank">
+         > <img src="imagenes/opal%202012/22.jpg" alt="foto1">
+        </a> <a href="imagenes/opal%202012/23.jpg"> <img src="imagenes/opal%202012/23.jpg"
+            alt="foto2"> </a> <a href="imagenes/opal%202012/24.jpg">
           <img src="imagenes/opal%202012/24.jpg" alt="foto1"> </a> <a href="imagenes/opal%202012/25.jpg"
-          target="_blank"> <img src="imagenes/opal%202012/25.jpg" alt="foto2">
-        </a> <a href="imagenes/opal%202012/26.JPG" target="_blank"> <img src="imagenes/opal%202012/26.JPG"
-            alt="foto1"> </a> <a href="imagenes/opal%202012/27.JPG" target="_blank">
+         > <img src="imagenes/opal%202012/25.jpg" alt="foto2">
+        </a> <a href="imagenes/opal%202012/26.JPG"> <img src="imagenes/opal%202012/26.JPG"
+            alt="foto1"> </a> <a href="imagenes/opal%202012/27.JPG">
           <img src="imagenes/opal%202012/27.JPG" alt="foto2"> </a> <a href="imagenes/opal%202012/28.JPG"
-          target="_blank"> <img src="imagenes/opal%202012/28.JPG" alt="foto1">
-        </a> <a href="imagenes/opal%202012/29.JPG" target="_blank"> <img src="imagenes/opal%202012/29.JPG"
-            alt="foto2"> </a> <a href="imagenes/opal%202012/30.JPG" target="_blank">
+         > <img src="imagenes/opal%202012/28.JPG" alt="foto1">
+        </a> <a href="imagenes/opal%202012/29.JPG"> <img src="imagenes/opal%202012/29.JPG"
+            alt="foto2"> </a> <a href="imagenes/opal%202012/30.JPG">
           <img src="imagenes/opal%202012/30.JPG" alt="foto1">&nbsp;</a><a href="imagenes/opal%202012/31.jpg"
-          target="_blank">&nbsp;</a><a href="imagenes/opal%202012/32.JPG" target="_blank">&nbsp;</a><a
-          href="imagenes/opal%202012/33.JPG" target="_blank"> </a> <a href="imagenes/opal%202012/35.JPG"
-          target="_blank"> <img src="imagenes/opal%202012/35.JPG"></a><a href="imagenes/opal%202012/32.JPG"
-          target="_blank"><img src="imagenes/opal%202012/32.JPG" alt="foto1"></a>
+         >&nbsp;</a><a href="imagenes/opal%202012/32.JPG">&nbsp;</a><a
+          href="imagenes/opal%202012/33.JPG"> </a> <a href="imagenes/opal%202012/35.JPG"
+         > <img src="imagenes/opal%202012/35.JPG"></a><a href="imagenes/opal%202012/32.JPG"
+         ><img src="imagenes/opal%202012/32.JPG" alt="foto1"></a>
       </section>
       <!-- Volver abajo -->
       <p><a href="imagenes.htm" class="volver">← Volver atrás</a></p>
     </main>
-  </body>
+  <script src="js/lightbox.js"></script></body>
 </html>
